<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentDescripton"
        app:srcCompat="@drawable/stylsgod" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="392dp"
        android:layout_height="80dp"
        android:text="@string/instusview"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="390dp"
        android:layout_height="66dp"
        android:layout_margin="5dp"
        android:hint="@string/enterDOgName" />


    <EditText
        android:id="@+id/editText_Date"
        android:layout_width="391dp"
        android:layout_height="66dp"
        android:layout_margin="5dp"
        android:hint="@string/EnterDate" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#388E3C"
        android:backgroundTint="#771919"
        android:text="@string/AddDogs"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#388E3C"
        android:text="@string/ViewDogs"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#388E3C"
        android:text="@string/button_settings"
        android:textStyle="bold" />

</LinearLayout>